# sudoku2

sudoku2/: CMakeLists.txt
sudoku2/sudoku2/: CMakeLists.txt  sudoku2.cpp  sudoku2.h
