# CMakeList.txt: Projekt CMake pro sudoku2, sem přidejte logiku zdrojového
# kódu a definic specifickou pro projekt.
#
cmake_minimum_required (VERSION 3.8)

# Přidejte zdrojový kód ke spustitelnému souboru tohoto projektu.
add_executable (sudoku2 "sudoku2.cpp" "sudoku2.h")

# TODO: V případě potřeby přidejte testy a cíle instalace.
